syntax = "proto3";

option java_multiple_files = true;
option java_package = "knp.ptithcm.datn.user_module.modules.base.grpc";
option java_outer_classname = "UserProto";

// User info
message UserGrpc {
    string id = 1;
    string keycloak_id = 2;
    string username = 3;
    string email = 4;
    string first_name = 5;
    string last_name = 6;
    string phone = 7;
    string address = 8;
    string identity_number = 9;
    repeated string roles = 10;
    int32 status = 11;
    string created_at = 12;
    string updated_at = 13;
}

// Request/Response messages
message GetUserByIdRequestGrpc { string id = 1; }
message GetUserByUsernameRequestGrpc { string username = 1; }
message GetUserByEmailRequestGrpc { string email = 1; }
message ListUsersRequestGrpc { int32 page = 1; int32 size = 2; }
message UpdateUserStatusRequestGrpc { string id = 1; int32 status = 2; }
message UpdateUserRoleRequestGrpc { string id = 1; int32 role = 2; }
message CreateUserRequestGrpc {
    string username = 1;
    string email = 2;
    string first_name = 3;
    string last_name = 4;
    string phone = 5;
    string address = 6;
    string identity_number = 7;
    string password = 8;
    repeated string roles = 9;
}
message UpdateUserRequestGrpc {
    string id = 1;
    string username = 2;
    string email = 3;
    string first_name = 4;
    string last_name = 5;
    string phone = 6;
    string address = 7;
    string identity_number = 8;
    repeated string roles = 9;
}
message UpdateUserPasswordRequestGrpc {
    string id = 1;
    string new_password = 2;
}
// Phone/OTP/Profile messages
message RegisterByPhoneRequestGrpc {
    string phone = 1;
    string password = 2;
    string first_name = 3;
    string last_name = 4;
}
message PhoneExistsRequestGrpc { string phone = 1; }
message PhoneExistsResponseGrpc { string message = 1; bool exists = 2; }
message SendOtpRequestGrpc { string phone = 1; }
message SendOtpResponseGrpc { string message = 1; string code = 2; }
message VerifyOtpRequestGrpc { string phone = 1; string otp = 2; }
message VerifyOtpResponseGrpc { string message = 1; bool valid = 2; }
message ResetPasswordWithOtpRequestGrpc { string phone = 1; string otp = 2; string new_password = 3; }
message ResetPasswordWithOtpResponseGrpc { string message = 1; }
message UpdateProfileRequestGrpc {
    string id = 1;
    string first_name = 2;
    string last_name = 3;
    string phone = 4;
    string address = 5;
    string identity_number = 6;
}
message DeleteUserRequestGrpc {
    string id = 1;
}
message DeleteUserResponseGrpc {
    string message = 1;
}

// Login messages
message LoginRequestGrpc {
    string username = 1;
    string password = 2;
}

message LoginResponseGrpc {
    string message = 1;
    string access_token = 2;
    string refresh_token = 3;
    string token_type = 4;
    int32 expires_in = 5;
    UserGrpc user = 6;
}

// Refresh and Logout messages
message RefreshTokenRequestGrpc {
    string refresh_token = 1;
}

message RefreshTokenResponseGrpc {
    string message = 1;
    string access_token = 2;
    string refresh_token = 3;
    string token_type = 4;
    int32 expires_in = 5;
}

message LogoutRequestGrpc {
    string refresh_token = 1;
}

message LogoutResponseGrpc {
    string message = 1;
}

message UserResponseGrpc { string message = 1; UserGrpc user = 2; }
message ListUsersResponseGrpc { string message = 1; repeated UserGrpc users = 2; int32 total = 3; }
message UpdateUserStatusResponseGrpc { string message = 1; UserGrpc user = 2; }
message UpdateUserRoleResponseGrpc { string message = 1; UserGrpc user = 2; }

// Service definition
service UserService {
    rpc GetUserById (GetUserByIdRequestGrpc) returns (UserResponseGrpc);
    rpc GetUserByUsername (GetUserByUsernameRequestGrpc) returns (UserResponseGrpc);
    rpc GetUserByEmail (GetUserByEmailRequestGrpc) returns (UserResponseGrpc);
    rpc ListUsers (ListUsersRequestGrpc) returns (ListUsersResponseGrpc);
    rpc UpdateUserStatus (UpdateUserStatusRequestGrpc) returns (UpdateUserStatusResponseGrpc);
    rpc UpdateUserRole (UpdateUserRoleRequestGrpc) returns (UpdateUserRoleResponseGrpc);
    rpc CreateUser (CreateUserRequestGrpc) returns (UserResponseGrpc);
    rpc UpdateUser (UpdateUserRequestGrpc) returns (UserResponseGrpc);
    rpc UpdateUserPassword (UpdateUserPasswordRequestGrpc) returns (UserResponseGrpc);
    rpc DeleteUser (DeleteUserRequestGrpc) returns (DeleteUserResponseGrpc);
    // Phone registration and OTP flows
    rpc RegisterByPhone (RegisterByPhoneRequestGrpc) returns (UserResponseGrpc);
    rpc PhoneExists (PhoneExistsRequestGrpc) returns (PhoneExistsResponseGrpc);
    rpc SendOtp (SendOtpRequestGrpc) returns (SendOtpResponseGrpc);
    rpc VerifyOtp (VerifyOtpRequestGrpc) returns (VerifyOtpResponseGrpc);
    rpc ResetPasswordWithOtp (ResetPasswordWithOtpRequestGrpc) returns (ResetPasswordWithOtpResponseGrpc);
    rpc UpdateProfile (UpdateProfileRequestGrpc) returns (UserResponseGrpc);
    rpc Login (LoginRequestGrpc) returns (LoginResponseGrpc);
    rpc RefreshToken (RefreshTokenRequestGrpc) returns (RefreshTokenResponseGrpc);
    rpc Logout (LogoutRequestGrpc) returns (LogoutResponseGrpc);
} 
